// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMessageDetails renders a received transaction message 1`] = `
<div
  class="tx__content"
>
  <transactionicon-stub
    transactiongroup="banking"
    transactiontype="Received"
  />
   
  <div
    class="tx__content__left"
  >
    
    Received
    
       from 
      
    <bech32-stub
      address="cosmos1"
    />
  </div>
   
  <div
    class="tx__content__right"
  >
    <p
      class="amount"
    >
      
      10,000 ATOM
    
    </p>
  </div>
</div>
`;

exports[`SendMessageDetails renders a sent transaction message 1`] = `
<div
  class="tx__content"
>
  <transactionicon-stub
    transactiongroup="banking"
    transactiontype="Sent"
  />
   
  <div
    class="tx__content__left"
  >
    
    Sent
    
       to 
      
    <bech32-stub
      address="cosmos1ahtlr29s38w23xxq7slcwmmz4c8x9efmr8qmee"
    />
  </div>
   
  <div
    class="tx__content__right"
  >
    <p
      class="amount"
    >
      
      10,000 ATOM
    
    </p>
  </div>
</div>
`;
